--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Generatore di Frasi Nonsense</title>
-  <link rel="stylesheet" href="" th:href="@{\styles\styles.css}" />
+  <link rel="stylesheet" href="../static/styles/styles.css" th:href="@{\styles\styles.css}" />
 <body>
   <div class="container">
     <h1>Generatore di Frasi Nonsense</h1>
