--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -145,7 +145,10 @@ button:hover {
 .tree ul {
   padding-top: 20px;
   position: relative;
-  display: table;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
   margin: 0 auto;
 }
 
