--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
       <div class="output-section">
         <div class="card">
           <h2>Syntax Tree</h2>
-          <div class="output-area" id="syntaxTree" th:text="${syntaxTree}">The tree will appear here...</div>
+          <div class="output-area" id="syntaxTree" th:utext="${syntaxTree}">The tree will appear here...</div>
         </div>
         <div class="card">
           <h2>Parts of Speech Extraction</h2>
