--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,15 +37,16 @@
       <div class="output-section">
         <div class="card">
           <h2>Syntax Tree</h2>
-          <div class="output-area" id="syntaxTree" th:utext="${syntaxTree}">The tree will appear here...</div>
+          <div class="output-area" id="syntaxTree" th:utext="${syntaxTree}" >The tree will appear here...</div>
+          
         </div>
         <div class="card">
           <h2>Parts of Speech Extraction</h2>
-          <div class="output-area" id="extractedWords">Nouns, verbs, adjectives...</div>
+          <div class="output-area" id="extractedWords" th:utext="${extractedWords}">The template will appear here...</div>
         </div>
         <div class="card">
           <h2>Generated Nonsense Sentence</h2>
-          <div class="output-area" id="nonsenseResult" th:text="${nonsenseResult}">Here is your nonsense gem!</div>
+          <div class="output-area" id="nonsenseResult" th:text="${nonsenseResult}">Your nonsense sentence will appear here ...</div>
         </div>
       </div>
     </div>
