Generator quasi finito
Ho continuato il generator e di base funziona.
Manca la gestione dei tempi dei verbi e sicuramente altro nella classe Generator, oltre all'aggiornamento non completo dell'interfaccia grafica.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="card">
           <h2>Generated Nonsense Sentence</h2>
-          <div class="output-area" id="nonsenseResult" th:text="${nonsenseResult}">Your nonsense sentence will appear here ...</div>
+          <div class="output-area" id="nonsenseResult" th:utext="${nonsenseResult}">Your nonsense sentence will appear here ...</div>
         </div>
       </div>
     </div>
