--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <header>
-            <h1 >Error</h1>
+            <h1>Error</h1>
         </header>
         <main>
             <section class="error-message">
-                <h2 style="color: red;" th:text="${errorMessage}"></h2>
+                <h2 style="color: red;" th:text="${errorMessage}">dddd</h2>
                 <p>We encountered an unexpected error. Please try again later or contact support if the issue persists.</p>
                 <a href="/" class="btn">Go to Homepage</a>
             </section>
